examples/ex_05_flext_mixins.expected
[result_and_conversion]
ok.unwrap_or: {'qahf': 'trxcka'}
ok.value_matches: True
fail.error: 'fnafqofp'
fail.error_code: 'vausie'
fail.error_matches: True
fail.error_code_matches: True
to_dict.dict: {'hcgc': 'lvejr', 'psbf': 285}
to_dict.none: {}
to_dict.dict_matches: True
to_dict.none_is_empty: True
ensure_result.raw: 719
ensure_result.existing: 960
ensure_result.raw_matches: True
ensure_result.existing_matches: True
traverse.ok: [350, 332]
traverse.fail_fast: 'odd:37'
traverse.collect: 'odd:37; odd:311'
traverse.ok_matches: True
traverse.fail_fast_matches: True
traverse.collect_has_both_errors: False
accumulate_errors.ok: [82, 22]
accumulate_errors.fail: 'ngmhy; rfitb'
accumulate_errors.ok_matches: True
accumulate_errors.fail_matches: False

[runtime_properties_and_tracking]
container.type: 'FlextContainer'
logger.is_flext_logger: True
context.type: 'FlextContext'
config.is_flext_settings: True
const.scope_operation: 'operation'
track.success.metrics: {'has_duration': False, 'operation_count': 1}
track.failure.message: 'vukbxosf'
track.failure.matches: True

[cqrs_validation_protocols]
metrics.record_metric: True
metrics.get_metrics.success: True
metrics.get_metrics.value: {'mxqdd': 48}
metrics.get_metrics.matches: True
context_stack.push_context: True
context_stack.current_context.before_pop: True
context_stack.pop_context.success: True
context_stack.pop_context.value: {'handler_mode': 'query', 'handler_name': 'ogpx'}
context_stack.pop_context.matches: True
context_stack.current_context.after_pop: True
validation.ok: True
validation.fail: 'Validation failed: fzncbcquk'
validation.ok_matches: True
validation.fail_matches: False
protocol.is_handler.good: True
protocol.is_handler.bad: False
protocol.is_service: True
protocol.validate_compliance.ok: True
protocol.validate_compliance.fail: 'Unknown protocol: Unknown. Supported: Handler, Service, CommandBus, Repository, Configurable'
protocol.validate_processor.good: True
protocol.validate_processor.fail: "Processor _BadProcessor missing required method 'process()'. Processors must implement: process, validate"
